# causets

./: .Makefile.swp  .causet  .gitignore  Causet.sh  GenerateNodes.cu  Hypergeometric.nb  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.orig  README  README.html  README.md  VERSION  aclocal.m4  action_pairs.cset.act.in  action_pairs_all.cset.act.out  active_tests  bootstrap.sh  build  causet  causet.log~  causet.sh  causet2  causet3  causet4  causetGL  causetGL.cpp  causetGL.hpp  causetinit  causetinit.sh  clustering.txt  config.status  configure  configure.ac  connections.txt  distribution.txt  gltest  gltest.cpp  (+14 more)
.notes/: causets.aux  causets.tex
.old1D/: README  main.h  ran2.h
autom4te.cache/: output.0  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
cluster/lsf/: causet_test  math_test  matlab_test
cluster/slurm/: slurm_config
dat/: CPU_10000_10_1_4-1385008682.cset  CPU_10000_10_1_4-1385044159.cset  CPU_10000_10_1_4-1387138768.cset  CPU_25441_5.29_2_3-1393371295.cset.out  CPU_25441_5.29_2_3-1393375796.cset.out  CPU_25441_5.29_2_3-1393376065.cset.out  CPU_25441_5.29_2_3-1393376463.cset.out  CPU_25441_5.29_2_3_-1394223657.cset.out  CPU_25441_5.29_2_4-1389933673.cset  CPU_25441_5.29_2_4-1393368963.cset.out  README  chi_dist.cset  data_keys.key  dk_stats_direct.pl  phi_dist.cset  tau2d_dist.cset  tau4d_dist.cset  theta_dist.cset
dat/dst/: CPU_10000_10_1_4-1385044159_DST.cset  CPU_10000_10_1_4-1387138768_DST.cset  CPU_25441_5.29_2_4-1389933673_DST.cset
dat/edg/: CPU_10000_10_1_4-1385044159_EDG.cset  CPU_10000_10_1_4-1387138768_EDG.cset  CPU_25441_5.29_2_4-1389933673_EDG.cset
dat/pos/: CPU_10000_10_1_4-1385044159_POS.cset  CPU_10000_10_1_4-1387138768_POS.cset  CPU_25441_5.29_2_4-1389933673_POS.cset
data/: observables.h5
doc/: LICENSE.md  README  README.md  VERSION  active_tests  spacetime_descriptions.txt
etc/: GeodesicRegion3Debug.nb  ToMatlab.m  action  action2  analyze.m  analyze.py  autocorr.py  avg_deg_math.m  avg_deg_math.out  benchmark  broadcast  clust_dist  clust_dist2  clustering  components  components.py  confusion  confusion.py  constants  data_keys.cset.key  de_sitter_flat_debug.nb  de_sitter_geodesics.m  deg_dist  deg_dist.py  deg_plot  deg_plot2  degrees  degrees.py  degtable  dk_stats_direct  dk_stats_direct.pl  dottoedg  dsgrparams  dsgrparams2  dustgrparams  dustgrparams2  embedding.m  fields  foliation  gen_partial_fractions.m  (+33 more)
etc/action/: ac_rawdata_timelike  action_multiple  action_multiple2  action_params  action_rawdata  action_single  action_test  action_timelike  cat_cards  cat_intervals
etc/ctuc/: ctuc.m  ctuc_table_cat.m  ctuc_test.m  matlab_batcher
etc/nintlib/: Makefile
etc/old/: constants
etc/printcolor/: Makefile  printcolor.cpp  printcolor.h
etc/profiling/: causet.nvvp
etc/raduc/: matlab_batcher  raduc2.m  raduc2test.m  raduc_table_cat.m
etc/routing/: gr_data  gr_diamond_k  gr_diamond_q  gr_ds_diamond_k  gr_ds_diamond_q  gr_ds_slab_k  gr_ds_slab_q  gr_dust_diamond_k  gr_dust_diamond_q  gr_dust_slab_k  gr_dust_slab_q  gr_flrw_diamond_k  gr_flrw_diamond_q  gr_flrw_slab_k  gr_flrw_slab_q  gr_params  gr_rawdata_degree  gr_rawdata_density  gr_test  gr_test_degree  gr_test_density  gr_test_diamond_degree  gr_test_diamond_density  gr_test_slab_degree  gr_test_slab_density
inc/: .Causet.h.swp  Anneal.h  AnnealKernels.h  Causet.h  Causet.hpp  CausetOperations.cuh  CausetOperations.hpp  CausetSubroutines.cuh  CausetSubroutines.hpp  Constants.h  Constants.in  Coordinates.h  CuResources.h  CuResources.hpp  Cusp.h  FastMath.h  GPUSubroutines.cu  GPUSubroutines.cuh  GPUSubroutines.h  GPUSubroutines.hpp  Geodesics.h  Makefile.am  MarkovChain.h  Measurements.cu  Measurements.h  Measurements_GPU.h  NetworkCreator.cu  NetworkCreator.h  NetworkCreator_GPU.h  Operations.cu  Operations.h  Operations_GPU.h  SMI.h  Spacetime.h  Subroutines.cu  Subroutines.h  Subroutines_GPU.h  Validate.h  autocorr2.cu  autocorr2.h  (+8 more)
local/etc/: checkjobs
lsf/: batch  causet  causet2  causet3  causet4  causet_bat  causet_lsf  causet_mpi  causet_setup  causet_test  cbat  ccat  cmath  cmpi  crun  math_bat  math_test  matlab_bat  matlab_lsf  matlab_test  mbat  mtest  setup  test
lsf/batch/: causet_lsf  math_lsf
lsf/setup/: causet_setup
lsf/tests/: action  diamond_navigation  mpi  navigation  slab_navigation  vecprod_navigation
lsf/wrapper/: causet_bat  matlab_bat
m4/: ax_check_cuda.m4  ax_fastmath.m4  ax_platform.m4  ax_prog_mpicxx.m4
mpi/: mpiwrapper  rankfile  rankfile_GRAHAM  syncsrc
mpi/tests/: hostfile1.txt  hostfile2.txt  mpitest  mpiwrapper1  mpiwrapper2  mpiwrapper3  mpiwrapper4
notes/: causets.aux  causets.bbl  causets.bib  causets.blg  causets.tex  causets.toc  newman.aux  newman.tex
old1D/: wills_causets.tar
opt/nintlib/: nintlib.cpp
opt/printcolor/: printcolor.h
par/: action.par  action_bench.par  action_link_rounded_bench.par  action_mpi.par  causet_ds10.par  causet_ds20.par  causet_ds60.par  causet_ds90.par  causet_dust10.par  causet_dust15.par  causet_dust75.par  causet_dust90.par  causet_frw10.par  causet_frw10_ext.par  causet_frw15.par  causet_frw20.par  causet_frw60.par  causet_frw75.par  causet_frw90.par  numpaths.par
pbs/batch/: causet_pbs
pbs/wrapper/: causet_wrp
printcolor/: Makefile.am  printcolor.cpp
slurm/batch/: causet_slm
slurm/setup/: causet_setup
slurm/tests/: action  (+6 more)
src/: Anneal.cu  Causet.cu  Causet.cu_o  CausetSubroutines.cu  CuResources.cu  Cusp.cu  FastMath.cpp  GPUSubroutines.cu  Makefile.am  Makefile.in  MarkovChain.cu  Matter_Dark_Energy_downscaled.f  Measurements.cu  Measurements_GPU.cu  NetworkCreator.cu  NetworkCreator_GPU.cu  Operations.cu  Operations_GPU.cu  Subroutines.cu  Subroutines_GPU.cu  Validate.cu  autocorr2.cpp  autocorr2.cu  ds3.F  ran2.cpp  stlLmnOn  stopwatch.cpp
src/.deps/: autocorr2.Po
src/printcolor/: Makefile.am  printcolor.cpp  printcolor.h
src/printcolor/.deps/: printcolor.Po
temp/: INSTALL
tests/: anneal  chains  curvature  curvedaction  evolve  lattice_gas  main  matrix_model  mcmc
(+77 files in other folders)
