###########################
#(C) Will Cunningham 2017 #
#         DK Lab          #
# Northeastern University #
###########################

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4 --install

include_HEADERS = Causet.h config.h Constants.h Coordinates.h CuResources.h Geodesics.h Measurements.h NetworkCreator_GPU.h NetworkCreator.h Operations_GPU.h Operations.h SMI.h Spacetime.h Subroutines_GPU.h Subroutines.h Validate.h
